# moods

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  PLAN.md  README.md  architecture.md  data.md  docker-compose.yml  fluent-bit.conf  init-db.sh  pyproject.toml  run.sh  settings.toml
.cursor/rules/: graphql-schema.mdc  sql-migrations.mdc
.github/workflows/: build-android.yml  build-backend.yml
android/: .gitignore  app.config.ts  app.json  eas.json  eslint.config.mjs  package-lock.json  package.json  run.sh
android/app/: +not-found.styles.tsx  +not-found.tsx  _layout.tsx  user-select.styles.tsx  user-select.tsx
android/app/(tabs)/: _layout.tsx  index.styles.tsx  index.tsx  settings.styles.tsx  settings.tsx  tags.styles.tsx  tags.tsx
android/components/: ColorPicker.styles.tsx  ColorPicker.tsx  DateDivider.styles.tsx  DateDivider.tsx  EntryCard.styles.tsx  EntryCard.tsx  ErrorFallback.tsx  MoodModal.styles.tsx  MoodModal.tsx  MoodPicker.styles.tsx  MoodPicker.tsx  MoodTag.styles.tsx  MoodTag.tsx  OfflineBanner.tsx  ProfileSection.tsx  SharingSection.tsx  TagEditModal.styles.tsx  TagEditModal.tsx  TagPicker.styles.tsx  TagPicker.tsx
android/lib/: auth.ts  config.ts  constants.ts  errors.ts  store.ts  theme.ts  useNetworkStatus.ts  useNotifications.ts  usePaginatedEntries.ts  useSharing.ts  useUserSearch.ts  utils.ts
android/lib/graphql/: client.ts  mutations.ts  queries.ts
android/styles/: ColorPicker.styles.tsx  DateDivider.styles.tsx  EntryCard.styles.tsx  ErrorFallback.styles.tsx  MoodModal.styles.tsx  MoodPicker.styles.tsx  MoodTag.styles.tsx  OfflineBanner.styles.tsx  TagEditModal.styles.tsx  TagPicker.styles.tsx  index.styles.tsx  not-found.styles.tsx  settings.styles.tsx  shared-styles.ts  tags.styles.tsx  theme.ts  user-select.styles.tsx
android/types/: env.d.ts  react-native-md5.d.ts
graphql/: generate.py
graphql/operations/: archive-entry.graphql  archive-tag.graphql  log-mood.graphql  mood-entries.graphql  refresh-token.graphql  search-users.graphql  send-login-code.graphql  tags.graphql  unarchive-tag.graphql  update-sharing.graphql  update-tag-metadata.graphql  update-user-settings.graphql  user.graphql  users.graphql  verify-login-code.graphql
migrations/: 0000.uuidv7-polyfill.rollback.sql  0000.uuidv7-polyfill.sql  0001.create-users.sql  0002.create-mood-entries.sql  0003.create-tags.rollback.sql  0003.create-tags.sql  0004.add-user-settings.sql  0005.add-user-archived-at.rollback.sql  0005.add-user-archived-at.sql  0006.tags-trgm-search.rollback.sql  0006.tags-trgm-search.sql  0007.create-auth-codes.rollback.sql  0007.create-auth-codes.sql  0008.create-mood-shares.rollback.sql  0008.create-mood-shares.sql  0009.soft-delete-shares.rollback.sql  0009.soft-delete-shares.sql  0010.users-trgm-search.rollback.sql  0010.users-trgm-search.sql  0011.add-user-icon.rollback.sql  0011.add-user-icon.sql  0011.create-device-tokens.sql  0012.auth-codes-failed-attempts.rollback.sql  0012.auth-codes-failed-attempts.sql
scripts/: generate_jwt_secret.py  set_version.py
src/moods/: app.py  config.py  db.py  errors.py  telemetry.py
src/moods/data/: __init__.py  auth.py  device_tokens.py  loaders.py  moods.py  shares.py  tags.py  users.py  utils.py
src/moods/orchestration/: auth.py  notifications.py
src/moods/resolvers/: __init__.py  auth.py  mood.py  scalars.py  tag.py  user.py
src/moods/schema/: auth.graphql  mood.graphql  (+3 more)
tests/: conftest.py  test_auth.py  test_edge_cases.py  test_health.py  test_moods.py  test_notifications.py  test_push_service.py  test_sharing.py  test_tags.py  test_user_entries.py  test_users.py
tests/integration/: conftest.py  test_auth.py  test_edge_cases.py  test_health.py  test_moods.py  test_sharing.py  test_tags.py  test_user_entries.py  test_users.py
web/: package-lock.json  package.json  run.sh  shadow-cljs.edn
(+38 files in other folders)
