[project]
name = "moods"
version = "2.0.0"
description = "Shared mood-tracking app"
requires-python = ">=3.12"
dependencies = [
    "starlette",
    "ariadne",
    "asyncpg",
    "aiosql",
    "dynaconf",
    "yoyo-migrations",
    "uvicorn[standard]",
    "aiodataloader>=0.4.3",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.9",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moods"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["moods"]
